# polus_hack

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  crypto.py  main.py
app/database/: database.py
app/database/models/: __init__.py  frame.py  stone.py
app/dependencies/: auth.py  database.py  header.py
app/models/: token.py
app/routers/: frame.py  stone.py  video.py
model/: inference.py
streamlit_app/: alchemy_class.py  inference.py  main.py
